# FiPS

./: .gitignore  .gitmodules  README.md  SETTINGS.py  build_env.sh  pyproject.toml
configs/: deit_base_config.yaml  gemma2_2b_config.yaml  gemma_2_2b_config.yaml  gemma_2_2b_config_local.yaml  gemma_2_2b_config_local_svd.yaml  llama_3_1_8b_config_local.yaml  llama_3_2_1b_config_local.yaml  swin_base_config.yaml  swin_large_config.yaml
configs/data/: cifar100.yaml  fake_imagenet.yaml  flowers.yaml  imagenet.yaml  inaturalist19.yaml  pets.yaml
configs/sweep/: H2E1_decay_sweep.yaml  H2E1_epoch_sweep.yaml  H2E1_lr_sweep.yaml  H2E1_num_batch_sweep.yaml  gemma2_2b_epoch_batch_sweep.yaml
data/: custom_hf_dataset.py  stratified_sampler.py
sd2s/: binarizer.py  lr.py  lrm.py  utils.py
training/: distil.py  distil_llm.py  distil_llm_local.py  distil_llm_local_norm.py  distil_llm_local_svd.py  finetune.py  llm_validation.py  transformer.py  validate.py  wandb_utils.py
