[tool.poetry]
name = "sd2s"
version = "0.1.0"
description = "LLM Compression and Efficient Adaptation by Low Rank Decomposition, Parameter Sharing and Dynamic Sparse Training"
authors = ["Cem Uyuk, Mike Lasby, Utku Evci"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
sparsimony = { path = "./third_party/sparsimony", develop = true }
python = ">=3.10, <=3.12"
torch = ">=2.0"
torchvision = ">=0.17.0"
transformers = ">=4.0.0"
accelerate = ">=0.27.0"
numpy = "1.*"
seaborn = "^0.13.2"
pandas = "^2.2.2"
ipywidgets = "^8.1.2"
datasets = "^2.19.1"
opencv-python = "^4.9.0.80"
pillow = "^10.3.0"
huggingface-hub = {extras = ["cli"], version = "^0.23.4"}
wandb = "^0.17.4"
timm = "^1.0.7"
python-dotenv = "^1.0.1"
hydra-core = "^1.3.2"
pytorch-lightning = "^2.3.3"
tqdm = "^4.66.4"
boto3 = "^1.34.147"
requests = "^2.32.3"
regex = "^2024.5.15"
sentencepiece = "^0.2.0"
sacremoses = "^0.1.1"
importlib-metadata = "^8.2.0"
scipy = "^1.14.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
exclude ='''
/(
    artefacts/*
    | .venv/*
    | third_party/*
)
'''